--- a/bms-service/pom.xml
+++ b/bms-service/pom.xml
@@ -50,5 +50,16 @@
       <version>1.10.19</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.2</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.google.collections</groupId>
+          <artifactId>google-collections</artifactId>
+          <version>1.0</version>
+      </dependency>
   </dependencies>
 </project>
